<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iamma.procom17iuappdevelopers.NewCourse">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editText_coursename"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cn"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_credithour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ch"/>

        <EditText
            android:id="@+id/editText_faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint = "@string/fa"/>

        <Button
            android:id="@+id/button_addcourse"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verif" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="120dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
        <!--
                <ListView
                    android:id="@+id/proList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" /> -->
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
