<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iamma.procom17iuappdevelopers.admin_verification">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/idLabel"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/idInput"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint1"
            android:layout_alignBaseline="@+id/idLabel"
            android:layout_alignBottom="@+id/idLabel"
            android:layout_toRightOf="@+id/idLabel"
            android:layout_toEndOf="@+id/idLabel" />

        <TextView
            android:id="@+id/passLabel"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:text="@string/pass"
            android:textSize="30sp"
            android:layout_below="@+id/idInput"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/passInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/passLabel"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/hint2"
            android:layout_alignLeft="@+id/idInput"
            android:layout_alignStart="@+id/idInput" />

        <Button
            android:id="@+id/verifBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="verifBtnClicked"
            android:text="@string/verif"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
